--- a/BlogSite/BlogSite.csproj
+++ b/BlogSite/BlogSite.csproj
@@ -1,9 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <TargetFrameworks>net7.0;net4.6</TargetFrameworks>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net4.6'">
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
+  </ItemGroup>
 
 </Project>
